Minor grid style fixes
Fix incorrect references on fast search and pagination that made them look broken

--- a/typescript-react/src/components/Table/Pagination/Pagination.module.css
+++ b/typescript-react/src/components/Table/Pagination/Pagination.module.css
@@ -18,13 +18,13 @@
     cursor: pointer;
     -webkit-appearance: none;
 
-    &Active {
+    &.Active {
       font-weight: bold;
       color: white;
       background-color: #49AFCD;
     }
 
-    &Disabled {
+    &.Disabled {
       color: #999999;
       cursor: not-allowed;
     }
